--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Sets all the text color to red! */
-.neurograph-warning {
+.excalibrain-warning {
   background-color: var(--text-highlight-bg);
   color: var(--text-normal);
 }
