--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,114 @@
   text-align: center;
 }
 
+.excalibrain-contentEl div.Island,
+.excalibrain-contentEl button.help-icon {
+  display:none;
+}
+
+.excalibrain-contentEl {
+  overflow: hidden !important;
+  position: relative;
+}
+
+/* -----------
+   TOOLS PANEL
+  ------------ */
+  .excalibrain-toolspanel-divider {
+    width: 2px;
+    background-color: var(--default-border-color);
+    margin-left: 8px;
+    margin-right: 3px;
+  }
+  
+  .excalibrain-toolspanel-wrapper {
+    z-index: 3;
+    position: absolute;
+    top: 10px;
+    padding-left: 10px;
+    /* Set width to auto to fit its content */
+    width: auto;
+    padding-right: 10px;
+    pointer-events: none;
+  }
+  
+  .excalibrain-dropdown-wrapper,
+  .excalibrain-searchinput {
+    /* Adjust flex properties to make them appear in separate rows */
+    flex-wrap: wrap;
+    margin-bottom: 5px; /* Add a small margin to separate the rows */
+  }
+  
+  .excalibrain-button {
+    vertical-align: middle;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-left: 5px !important;
+    margin-right: 0px !important;
+    width: 2.4em !important;
+  }
+  
+  .excalibrain-button.off {
+    background-color: var(--island-bg-color);
+  }
+  
+  .excalibrain-button.on {
+    background-color: var(--color-primary-darker);
+  }
+  
+  .excalibrain-searchinput {
+    width: 400px;
+    vertical-align: middle;
+    pointer-events: all;
+  }
+  
+  .excalibrain-buttons {
+    display: flex; /* Change display to flex */
+    /* Adjust width to the content */
+    width: auto;
+    margin-top: 5px;
+    pointer-events: all;
+    margin-left: -5px;
+  }
+  
+
+/* -----------
+     HISTORY
+  ------------ */
+
+.excalibrain-history-wrapper {
+  z-index: 3;
+  position: absolute;
+  bottom: 0px;
+  padding-left: 7rem;
+  padding-bottom: 10px;
+  width: 100%;
+  padding-right: 10px;
+  overflow: hidden;
+}
+
+.excalibrain-history-container {
+  overflow-y: hidden;
+  display: -webkit-box;
+  overflow-x: scroll;
+}
+
+.excalibrain-history-divider {
+  color: gold;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: smaller;
+}
+
+.excalibrain-history-item {
+  cursor: pointer;
+  color: silver;
+  font-size: smaller;
+}
+
+/* -----------
+    SETTINGS
+  ------------ */
 .excalibrain-settings-folding-L1 {
   font-size: large;
     font-weight: bold;
@@ -39,73 +147,7 @@
 
 .excalibrain-setting-controlEl {
   width: 90%;
-}
-
-.excalibrain-contentEl {
-  position: relative;
-}
-
-.excalibrain-toolspanel-wrapper {
-  z-index: 3;
-  position: absolute;
-  top: 10px;
-  padding-left: 10px;
-  width: 100%;
-  padding-right: 10px;
-  pointer-events: none;
-}
-
-.excalibrain-history-wrapper {
-  z-index: 3;
-  position: absolute;
-  bottom: 0px;
-  padding-left: 7rem;
-  padding-bottom: 10px;
-  width: 100%;
-  padding-right: 10px;
-  overflow: hidden;
-}
-
-.excalibrain-history-container {
-  overflow-y: hidden;
-  display: -webkit-box;
-  overflow-x: scroll;
-}
-
-.excalibrain-button {
-  vertical-align: middle; 
-  padding-left: 5px;
-  padding-right: 5px;
-  margin-left: 5px !important;
-  margin-right: 0px !important;
-  width: 2.4em !important;
-}
-
-.excalibrain-button span {
-  text-align: center;
-}
-
-.excalibrain-button.off {
-  background-color: var(--island-bg-color);
-}
-
-.excalibrain-button.on {
-  background-color: var(--color-primary-darker);
-}
-
-.excalibrain-searchinput {
-  width: 400px;
-  vertical-align: middle;
-  pointer-events: all;
-}
-
-.excalibrain-buttons {
-  display: inline-flex;
-  width: 100%;
-  margin-top: 5px;
-  margin-left: -5px;
-  pointer-events: all;
-}
+}  
 
 .excalibrain-settings-colorlabel {
   padding-right: 5px;
@@ -134,34 +176,13 @@
   margin-right: 5px;
 }
 
-.excalibrain-contentEl div.Island,
-.excalibrain-contentEl button.help-icon {
-  display:none;
-}
-
-.excalibrain-contentEl {
-  overflow: hidden !important;
-}
-
-.excalibrain-history-divider {
-  color: gold;
-  margin-left: 5px;
-  margin-right: 5px;
-  font-size: smaller;
-}
-
-.excalibrain-history-item {
-  cursor: pointer;
-  color: silver;
-  font-size: smaller;
-}
-
 .excalibrain-dropdown-wrapper {
   display: inline-flex;
 }
 
-/*-----------*/
-/*MULTISELECT*/
+/* -----------
+   MULTISELECT
+  ------------ */
 .multiselect-container {
   padding-left: 5px;
   width:200px;
