--- a/styles.css
+++ b/styles.css
@@ -21,40 +21,59 @@
 /* -----------
    TOOLS PANEL
   ------------ */
-  .excalibrain-toolspanel-divider {
-    width: 0.15em;
-    background-color: var(--default-border-color);
-    margin-left: 0.5em;
-    margin-right: 0.2em;
-  }
-  
   .excalibrain-toolspanel-wrapper {
     z-index: 3;
     position: absolute;
     top: 0.6em;
     padding-left: 0.6em;
     /* Set width to auto to fit its content */
-    width: auto;
+    width: 100%;
     padding-right: 0.6em;
     pointer-events: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   
   .excalibrain-dropdown-wrapper,
+  .excalibrain-buttons {
+    pointer-events: none;
+    margin-top: 0.3em;
+    max-width: 37em;
+    justify-content: space-between;
+  }
+
   .excalibrain-searchinput {
-    /* Adjust flex properties to make them appear in separate rows */
-    flex-wrap: wrap;
-    margin-bottom: 0.3em; /* Add a small margin to separate the rows */
+    width: 26em;
+    vertical-align: middle;
+    pointer-events: all;
   }
   
+  .excalibrain-buttons {
+    margin-left: -0.3em;
+    display: flex;
+    float: right;
+    flex: 1 0 30em;
+  }
+
+  .excalibrain-toolspanel-divider {
+    width: 0.15em;
+    background-color: var(--default-border-color);
+    margin-left: 0.5em;
+    margin-right: 0.2em;
+  }
+
   .excalibrain-button {
+    pointer-events: all;
     vertical-align: middle;
     padding-left: 0.3em;
     padding-right: 0.3em;
     margin-left: 0.3em !important;
     margin-right: 0px !important;
     width: 2.4em !important;
+    justify-content: center !important;
   }
-  
+
   .excalibrain-button.off {
     background-color: var(--island-bg-color);
   }
@@ -62,46 +81,7 @@
   .excalibrain-button.on {
     background-color: var(--color-primary-darker);
   }
-  
-  .excalibrain-searchinput {
-    width: 28.8em;
-    vertical-align: middle;
-    pointer-events: all;
-  }
-  
-  .excalibrain-buttons {
-    display: flex; /* Change display to flex */
-    /* Adjust width to the content */
-    width: auto;
-    pointer-events: all;
-    margin-left: -0.3em;
-    margin-top: 0.3em;
-  }
-  
-  /* Media Query */
-  @media screen and (min-width: 90em) {
-    .excalibrain-dropdown-wrapper,
-    .excalibrain-buttons {
-      /* Make them appear in the same row */
-      display: flex !important;
-    }
-  
-    .excalibrain-dropdown-wrapper {
-      /* Float to the left */
-      float: left;
-      margin-bottom: 0px;
-    }
-  
-    .excalibrain-buttons {
-      /* Float to the right */
-      float: right;
-      margin-top: 0px;
-    }
 
-    .excalibrain-toolspanel-wrapper {
-      width: 100%;
-    }
-  }
 /* -----------
      HISTORY
   ------------ */
@@ -121,6 +101,8 @@
   overflow-y: hidden;
   display: -webkit-box;
   overflow-x: scroll;
+  padding-left: 0.5em;
+  background-color: #00000030;
 }
 
 .excalibrain-history-divider {
@@ -207,8 +189,8 @@
    MULTISELECT
   ------------ */
 .multiselect-container {
-  padding-left: 5px;
-  width:14.4em;
+  padding-left: 0.3em;
+  width:14.2em;
   pointer-events: all;
 }
 
